# Xcroller

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  scanner.rs
src/components/: FilterSidebar.tsx  FullscreenViewer.tsx  MediaGrid.tsx  MediaTile.tsx  SettingsModal.tsx  Toolbar.tsx
src/lib/: store.ts  types.ts
