[package]
name = "xcroller"
version = "0.1.0"
description = "Xcroller Media Browser"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xcroller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
image = "0.24"
rayon = "1.8"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.5"
mp4 = "0.14"

